# advent_of_code

./: .gitignore  CMakeLists.txt  cmake_command.sh
include/: day_1.h  day_2.h
main/: day_1_main.cpp
src/: day_1.cpp  day_2.cpp
test/: day_1_test.cpp
